// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render empty Dashboard 1`] = `
<table
  className="table table-striped table-bordered table-hover"
>
  <thead>
    <tr>
      <th
        className="sticky-top"
        style={
          Object {
            "background": "var(--white)",
            "top": 30,
          }
        }
      >
        url
      </th>
      <th
        className="text-center sticky-top"
        style={
          Object {
            "background": "var(--white)",
            "top": 30,
          }
        }
      >
        <span
          style={
            Object {
              "fontSize": "0.9em",
            }
          }
        >
          Accessibilité
          <br />
          <svg
            fill="none"
            height={16}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "cursor": "pointer",
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="16"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="8"
              y2="8"
            />
          </svg>
        </span>
        <svg
          fill="none"
          height={16}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          style={
            Object {
              "cursor": "pointer",
              "marginLeft": 5,
              "stroke": "var(--danger)",
            }
          }
          viewBox="0 0 24 24"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12.01"
            y1="17"
            y2="17"
          />
        </svg>
      </th>
      <th
        className="text-center sticky-top"
        style={
          Object {
            "background": "var(--white)",
            "top": 30,
          }
        }
      >
        <span
          style={
            Object {
              "fontSize": "0.9em",
            }
          }
        >
          Performance
          <br />
          <svg
            fill="none"
            height={16}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "cursor": "pointer",
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="16"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="8"
              y2="8"
            />
          </svg>
        </span>
      </th>
      <th
        className="text-center sticky-top"
        style={
          Object {
            "background": "var(--white)",
            "top": 30,
          }
        }
      >
        <span
          style={
            Object {
              "fontSize": "0.9em",
            }
          }
        >
          SEO
          <br />
          <svg
            fill="none"
            height={16}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "cursor": "pointer",
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="16"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="8"
              y2="8"
            />
          </svg>
        </span>
      </th>
      <th
        className="text-center sticky-top"
        style={
          Object {
            "background": "var(--white)",
            "top": 30,
          }
        }
      >
        <span
          style={
            Object {
              "fontSize": "0.9em",
            }
          }
        >
          SSL
          <br />
          <svg
            fill="none"
            height={16}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "cursor": "pointer",
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="16"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="8"
              y2="8"
            />
          </svg>
        </span>
      </th>
      <th
        className="text-center sticky-top"
        style={
          Object {
            "background": "var(--white)",
            "top": 30,
          }
        }
      >
        <span
          style={
            Object {
              "fontSize": "0.9em",
            }
          }
        >
          HTTP
          <br />
          <svg
            fill="none"
            height={16}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "cursor": "pointer",
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="16"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="8"
              y2="8"
            />
          </svg>
        </span>
      </th>
      <th
        className="text-center sticky-top"
        style={
          Object {
            "background": "var(--white)",
            "top": 30,
          }
        }
      >
        <span
          style={
            Object {
              "fontSize": "0.9em",
            }
          }
        >
          Disponibilité
          <br />
          <svg
            fill="none"
            height={16}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "cursor": "pointer",
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="16"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="8"
              y2="8"
            />
          </svg>
        </span>
      </th>
      <th
        className="text-center sticky-top"
        style={
          Object {
            "background": "var(--white)",
            "top": 30,
          }
        }
      >
        <span
          style={
            Object {
              "fontSize": "0.9em",
            }
          }
        >
          Vulnérabilités
          <br />
          <svg
            fill="none"
            height={16}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "cursor": "pointer",
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="16"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="8"
              y2="8"
            />
          </svg>
        </span>
      </th>
      <th
        className="text-center sticky-top"
        style={
          Object {
            "background": "var(--white)",
            "top": 30,
          }
        }
      >
        <span
          style={
            Object {
              "fontSize": "0.9em",
            }
          }
        >
          OWASP
          <br />
          <svg
            fill="none"
            height={16}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "cursor": "pointer",
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="16"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="8"
              y2="8"
            />
          </svg>
        </span>
      </th>
      <th
        className="text-center sticky-top"
        style={
          Object {
            "background": "var(--white)",
            "top": 30,
          }
        }
      >
        <span
          style={
            Object {
              "fontSize": "0.9em",
            }
          }
        >
          Trackers
          <br />
          <svg
            fill="none"
            height={16}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "cursor": "pointer",
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="16"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="8"
              y2="8"
            />
          </svg>
        </span>
        <svg
          fill="none"
          height={16}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          style={
            Object {
              "cursor": "pointer",
              "marginLeft": 5,
              "stroke": "var(--danger)",
            }
          }
          viewBox="0 0 24 24"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12.01"
            y1="17"
            y2="17"
          />
        </svg>
      </th>
      <th
        className="text-center sticky-top"
        style={
          Object {
            "background": "var(--white)",
            "top": 30,
          }
        }
      >
        <span
          style={
            Object {
              "fontSize": "0.9em",
            }
          }
        >
          Cookies
          <br />
          <svg
            fill="none"
            height={16}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "cursor": "pointer",
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="16"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="8"
              y2="8"
            />
          </svg>
        </span>
      </th>
      <th
        className="text-center sticky-top"
        style={
          Object {
            "background": "var(--white)",
            "top": 30,
          }
        }
      >
        <span
          style={
            Object {
              "fontSize": "0.9em",
            }
          }
        >
          Nuclei
          <br />
          <svg
            fill="none"
            height={16}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "cursor": "pointer",
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="16"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="8"
              y2="8"
            />
          </svg>
        </span>
      </th>
    </tr>
  </thead>
  <tbody />
</table>
`;

exports[`Should render full Dashboard 1`] = `
Array [
  <table
    className="table table-striped table-bordered table-hover"
  >
    <thead>
      <tr>
        <th
          className="sticky-top"
          style={
            Object {
              "background": "var(--white)",
              "top": 30,
            }
          }
        >
          url
        </th>
        <th
          className="text-center sticky-top"
          style={
            Object {
              "background": "var(--white)",
              "top": 30,
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": "0.9em",
              }
            }
          >
            Accessibilité
            <br />
            <svg
              fill="none"
              height={16}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </span>
          <svg
            fill="none"
            height={16}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "cursor": "pointer",
                "marginLeft": 5,
                "stroke": "var(--danger)",
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
            />
            <line
              x1="12"
              x2="12"
              y1="9"
              y2="13"
            />
            <line
              x1="12"
              x2="12.01"
              y1="17"
              y2="17"
            />
          </svg>
        </th>
        <th
          className="text-center sticky-top"
          style={
            Object {
              "background": "var(--white)",
              "top": 30,
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": "0.9em",
              }
            }
          >
            Performance
            <br />
            <svg
              fill="none"
              height={16}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </span>
        </th>
        <th
          className="text-center sticky-top"
          style={
            Object {
              "background": "var(--white)",
              "top": 30,
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": "0.9em",
              }
            }
          >
            SEO
            <br />
            <svg
              fill="none"
              height={16}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </span>
        </th>
        <th
          className="text-center sticky-top"
          style={
            Object {
              "background": "var(--white)",
              "top": 30,
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": "0.9em",
              }
            }
          >
            SSL
            <br />
            <svg
              fill="none"
              height={16}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </span>
        </th>
        <th
          className="text-center sticky-top"
          style={
            Object {
              "background": "var(--white)",
              "top": 30,
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": "0.9em",
              }
            }
          >
            HTTP
            <br />
            <svg
              fill="none"
              height={16}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </span>
        </th>
        <th
          className="text-center sticky-top"
          style={
            Object {
              "background": "var(--white)",
              "top": 30,
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": "0.9em",
              }
            }
          >
            Disponibilité
            <br />
            <svg
              fill="none"
              height={16}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </span>
        </th>
        <th
          className="text-center sticky-top"
          style={
            Object {
              "background": "var(--white)",
              "top": 30,
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": "0.9em",
              }
            }
          >
            Vulnérabilités
            <br />
            <svg
              fill="none"
              height={16}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </span>
        </th>
        <th
          className="text-center sticky-top"
          style={
            Object {
              "background": "var(--white)",
              "top": 30,
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": "0.9em",
              }
            }
          >
            OWASP
            <br />
            <svg
              fill="none"
              height={16}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </span>
        </th>
        <th
          className="text-center sticky-top"
          style={
            Object {
              "background": "var(--white)",
              "top": 30,
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": "0.9em",
              }
            }
          >
            Trackers
            <br />
            <svg
              fill="none"
              height={16}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </span>
          <svg
            fill="none"
            height={16}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "cursor": "pointer",
                "marginLeft": 5,
                "stroke": "var(--danger)",
              }
            }
            viewBox="0 0 24 24"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
            />
            <line
              x1="12"
              x2="12"
              y1="9"
              y2="13"
            />
            <line
              x1="12"
              x2="12.01"
              y1="17"
              y2="17"
            />
          </svg>
        </th>
        <th
          className="text-center sticky-top"
          style={
            Object {
              "background": "var(--white)",
              "top": 30,
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": "0.9em",
              }
            }
          >
            Cookies
            <br />
            <svg
              fill="none"
              height={16}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </span>
        </th>
        <th
          className="text-center sticky-top"
          style={
            Object {
              "background": "var(--white)",
              "top": 30,
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": "0.9em",
              }
            }
          >
            Nuclei
            <br />
            <svg
              fill="none"
              height={16}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <a
            href="/url/https%3A%2F%2Fbeta.gouv.fr%2F"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
             
            beta.gouv.fr
          </a>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-success"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            90 %
          </span>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-success"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            93 %
          </span>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-success"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            100 %
          </span>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-success"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            A+
          </span>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-warning"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            D
          </span>
        </td>
        <td
          className="text-center"
        >
          <svg
            fill="none"
            height={20}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="4.93"
              x2="19.07"
              y1="4.93"
              y2="19.07"
            />
          </svg>
        </td>
        <td
          className="text-center"
        >
          <svg
            fill="none"
            height={20}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="4.93"
              x2="19.07"
              y1="4.93"
              y2="19.07"
            />
          </svg>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-warning"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            13
          </span>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-danger"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            13
          </span>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-info"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            2
          </span>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-info"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            4
          </span>
        </td>
      </tr>
      <tr>
        <td>
          <a
            href="/url/https%3A%2F%2Fwww.fabrique.social.gouv.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
             
            www.fabrique.social.gouv.fr
          </a>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-success"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            92 %
          </span>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-danger"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            29 %
          </span>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-info"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            83 %
          </span>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-success"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            A+
          </span>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-warning"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            D+
          </span>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-success"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            100 %
          </span>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-info"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            4
          </span>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-info"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            8
          </span>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-success"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            0
          </span>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-info"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            2
          </span>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-info"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            2
          </span>
        </td>
      </tr>
    </tbody>
  </table>,
  " ",
]
`;

exports[`Tools config Should render Dashboard with limited tools 1`] = `
Array [
  <table
    className="table table-striped table-bordered table-hover"
  >
    <thead>
      <tr>
        <th
          className="sticky-top"
          style={
            Object {
              "background": "var(--white)",
              "top": 30,
            }
          }
        >
          url
        </th>
        <th
          className="text-center sticky-top"
          style={
            Object {
              "background": "var(--white)",
              "top": 30,
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": "0.9em",
              }
            }
          >
            HTTP
            <br />
            <svg
              fill="none"
              height={16}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </span>
        </th>
        <th
          className="text-center sticky-top"
          style={
            Object {
              "background": "var(--white)",
              "top": 30,
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": "0.9em",
              }
            }
          >
            OWASP
            <br />
            <svg
              fill="none"
              height={16}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              style={
                Object {
                  "cursor": "pointer",
                }
              }
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="16"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="8"
                y2="8"
              />
            </svg>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <a
            href="/url/https%3A%2F%2Fbeta.gouv.fr%2F"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
             
            beta.gouv.fr
          </a>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-warning"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            D
          </span>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-warning"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            13
          </span>
        </td>
      </tr>
      <tr>
        <td>
          <a
            href="/url/https%3A%2F%2Fwww.fabrique.social.gouv.fr"
            onClick={[Function]}
          >
            <svg
              fill="none"
              height={16}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
             
            www.fabrique.social.gouv.fr
          </a>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-warning"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            D+
          </span>
        </td>
        <td
          className="text-center"
        >
          <span
            className="badge badge-info"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            8
          </span>
        </td>
      </tr>
    </tbody>
  </table>,
  " ",
]
`;
